--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "point-breaks": "0.0.1",
+    "styled-components": "^3.4.0"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
