--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "16.x"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "nwb": "0.23.x",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
