makes edits to the readme and changes the description in both the readme.md and the package.json file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "landing-page-components",
   "version": "1.0.0",
-  "description": "landing-page-components React component",
+  "description": "basic landing page components for the busy developer.",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
